#4: create header-layout-component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<main class="main">GDgasdasdhg</main>
+<main class="main">
+  <header-layout></header-layout>
+</main>
 
 <router-outlet />
 <!-- Không được xóa-->
