--- a/src/app/shared/header-layout/header-layout-component.html
+++ b/src/app/shared/header-layout/header-layout-component.html
@@ -47,7 +47,12 @@
     </svg>
   </div>
   <div class="group-navigation">
-    <div>Gio Hang</div>
+    <div>
+      <img
+        src="https://www.google.com/imgres?q=iimg&imgurl=https%3A%2F%2Fmedia.licdn.com%2Fdms%2Fimage%2Fv2%2FC4E0BAQFb4AMniKbIFg%2Fcompany-logo_200_200%2Fcompany-logo_200_200%2F0%2F1631326377414%3Fe%3D2147483647%26v%3Dbeta%26t%3Dei_bzdmYE5IreAwzleLgfCyUxocMU7mWamA6aGhlDd4&imgrefurl=https%3A%2F%2Fmu.linkedin.com%2Fcompany%2Fiimg-ltd&docid=0zeRsCS4i1_sYM&tbnid=Sfkt6QQCjrvvqM&vet=12ahUKEwiZgvu7xZCMAxW7n2MGHdoGF2MQM3oECBcQAA..i&w=200&h=200&hcb=2&ved=2ahUKEwiZgvu7xZCMAxW7n2MGHdoGF2MQM3oECBcQAA"
+        alt="logo"
+      />sád
+    </div>
     <div>Mua Hang</div>
   </div>
 </div>
