--- a/src/app/shared/header-layout/header-layout-component.css
+++ b/src/app/shared/header-layout/header-layout-component.css
@@ -14,3 +14,12 @@
   display: flex;
   column-gap: 2rem;
 }
+
+.group-navigation .btn-navigation {
+  background-image: linear-gradient(to right, #c50ac5, #9237f4);
+  background-color: #9237f4;
+  padding: 0.5rem;
+  text-align: center;
+  border-radius: 10px;
+  cursor: pointer;
+}
