--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,71 @@
 /*Viết style ở đây */
+h1 {
+  padding: 3rem 0;
+  margin: 0;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.btn-main {
+  background-image: linear-gradient(to right, #c50ac5, #9237f4);
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.main {
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.wrapper-cart {
+  background-image: linear-gradient(to right, #c50ac5, #9237f4);
+  height: calc(100vh - 96.8px); /* Thêm khoảng trắng */
+}
+
+.group-cart {
+  width: 75%;
+  background-color: aliceblue;
+  margin: auto;
+  border-radius: 4px;
+}
+
+.header-cart {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: #656967;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.col-1 {
+  flex: 1;
+}
+.col-2 {
+  flex: 1.5;
+}
+.col-3 {
+  flex: 1;
+}
+.col-4 {
+  flex: 0.5;
+}
+.body-cart {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.row-cart {
+  display: flex;
+  padding: 1rem;
+  justify-content: space-between;
+  align-items: center;
+}
