--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,19 +43,19 @@
           <div class="col-1">
             <img
               src="assets/images/shoe-1.png"
-              alt=""
-              width="60px"
+              alt="Good Shoe-1"
+              width="80px"
               height="auto"
             />
           </div>
-          <div class="col-2">Good Shoe-1</div>
-          <div class="col-3">400$</div>
+          <div class="col-2">{{ "GoodShoe-1" | uppercasePipe }}</div>
+          <div class="col-3">{{ 10000000 | currencyPipe }}</div>
           <div class="col-4">
             <div class="btn-main">
               <img
                 src="assets/images/trash.png"
-                alt=""
-                width="50px"
+                alt="Delete Item"
+                width="30px"
                 height="auto"
               />
             </div>
