--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,17 +39,17 @@
         <div class="col-4">Action</div>
       </div>
       <div class="body-cart">
-        <div class="row-cart">
+        <div class="row-cart" *ngFor="let item of products">
           <div class="col-1">
             <img
-              src="assets/images/shoe-1.png"
+              src="{{ item.image }}"
               alt="Good Shoe-1"
               width="80px"
               height="auto"
             />
           </div>
-          <div class="col-2">{{ "GoodShoe-1" | uppercasePipe }}</div>
-          <div class="col-3">{{ 10000000 | currencyPipe }}</div>
+          <div class="col-2">{{ item.name | uppercasePipe }}</div>
+          <div class="col-3">{{ item.price | currencyPipe }}</div>
           <div class="col-4">
             <div class="btn-main">
               <img
