--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -6,7 +6,7 @@
     <div class="col-4">Action</div>
   </div>
   <div class="body-cart">
-    <!-- <div class="row-cart" *ngFor="let item of products">
+    <div class="row-cart" *ngFor="let item of products">
       <div class="col-1">
         <a [routerLink]="['/detail', item.id]">
           <img
@@ -29,6 +29,6 @@
           />
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
