--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -20,7 +20,7 @@
       <div class="col-2">{{ item.name | uppercasePipe }}</div>
       <div class="col-3">{{ item.price | currencyPipe }}</div>
       <div class="col-4">
-        <div class="btn-main">
+        <div class="btn-main" (click)="handleDelete(item.id)">
           <img
             src="assets/images/trash.png"
             alt="Delete Item"
