--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="main">
   <header-layout></header-layout>
   <router-outlet />
-  <!-- Không được xóa-->
+  <!--Hiển thị các component con-->
 </main>
