#22 Destruction Session & ngOnDestroy

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,9 +33,13 @@
   <h1>Shopping Cart</h1>
   <!-- [ngClass]="{ active: isActive }"-->
 
-  <app-product-item
-    [products]="products"
-    (dataEvent)="handleDelete($event)"
-  ></app-product-item>
+  <div *ngIf="isVisible">
+    <app-product-item
+      [products]="products"
+      (dataEvent)="handleDelete($event)"
+    ></app-product-item>
+  </div>
+
+  <button (click)="handleChangeVisible()">OKE</button>
 </div>
 <!--End #9 End-->
