--- a/src/app/product-item/product-item.component.css
+++ b/src/app/product-item/product-item.component.css
@@ -1,76 +1,42 @@
 .group-cart {
-  width: 80%;
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  padding-bottom: 1rem;
+  width: 75%;
+  background: #fff;
   margin: auto;
+  padding: 2rem;
+  border-radius: 4px;
 }
 
 .header-cart {
   display: flex;
-  justify-content: space-between;
   padding: 1rem;
-  background-color: #656967;
+  background: #e2e2e2;
   text-transform: uppercase;
-  font-weight: bold;
-  color: white;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .col-1 {
   flex: 1;
-  text-align: center;
 }
 .col-2 {
   flex: 1.5;
-  text-align: center;
 }
 .col-3 {
   flex: 1;
-  text-align: center;
 }
 .col-4 {
   flex: 0.5;
-  text-align: center;
 }
 
 .body-cart {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  row-gap: 1rem;
+  margin-top: 1rem;
   padding: 1rem;
 }
 
 .row-cart {
   display: flex;
-  padding: 1rem;
-  justify-content: space-between;
   align-items: center;
-  background: #f9f9f9;
-  border-radius: 6px;
-  transition: background 0.3s;
-}
-
-.row-cart:hover {
-  background: #eaeaea;
-}
-
-.btn-main {
-  background-image: linear-gradient(to right, #c50ac5, #9237f4);
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: transform 0.2s;
-}
-
-.btn-main:hover {
-  transform: scale(1.1);
-}
-
-.active {
-  display: block;
 }
