--- a/src/app/shared/header-layout/header-layout-component.css
+++ b/src/app/shared/header-layout/header-layout-component.css
@@ -6,20 +6,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.6rem 1rem;
-  box-shadow: rgb(0, 0, 0.15) 1px 1px 10px 0px;
+  box-shadow: rgb(0, 0, 0, 0.15) 1px 1px 10px 0px;
+  padding: 1rem 1rem;
 }
 
-.group-navigation {
+.group-header .group-navigation {
   display: flex;
-  column-gap: 2rem;
-}
-
-.group-navigation .btn-navigation {
-  background-image: linear-gradient(to right, #c50ac5, #9237f4);
-  background-color: #9237f4;
-  padding: 0.5rem;
-  text-align: center;
-  border-radius: 10px;
-  cursor: pointer;
+  column-gap: 1rem;
 }
