--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,14 @@
 <div class="wrapper-cart">
   <h1>Detail Product</h1>
+  <div style="color: antiquewhite; font-weight: 500">
+    <img
+      src="{{ productItem.image }}"
+      alt="Adidas"
+      style="padding: 0 3rem; max-width: 100%; display: block; margin: 0 auto"
+      width="30%"
+      height="auto"
+    />
+    <div>Name Product:{{ productItem.name }}</div>
+    <div>Price Product: {{ productItem.price }}</div>
+  </div>
 </div>
