--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -8,14 +8,16 @@
       padding: 1rem;
       border-radius: 8px;
     "
+    [formGroup]="product"
+    ;
   >
     <div class="form-control">
       <label for="name">Name:</label>
-      <div><input type="text" id="name" [formControl]="name" /></div>
+      <div><input type="text" id="name" /></div>
     </div>
     <div class="form-control">
       <label for="name">Price:</label>
-      <div><input type="text" id="price" [formControl]="price" /></div>
+      <div><input type="text" id="price" /></div>
     </div>
     <div class="form-control">
       <div
