--- a/src/app/create/create.component.css
+++ b/src/app/create/create.component.css
@@ -1,6 +1,6 @@
 .wrapper-cart {
   background-image: linear-gradient(to right, #d434b0, #8029fc);
-  height: calc(100vh - 70px);
+  height: calc(100% - 70px);
 }
 
 .form-control {
